--- a/content-moderation-service/pom.xml
+++ b/content-moderation-service/pom.xml
@@ -5,8 +5,8 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>4.0.3</version>
-		<relativePath/> <!-- lookup parent from repository -->
+        <version>3.2.1</version>
+		<relativePath/>
 	</parent>
 	<groupId>co.za.flash</groupId>
 	<artifactId>content-moderation-service</artifactId>
