--- a/content-moderation-service/src/main/resources/application.properties
+++ b/content-moderation-service/src/main/resources/application.properties
@@ -1,18 +1,13 @@
 spring.application.name=content-moderation-service
 
-spring.datasource.url=jdbc:mysql://localhost:3306/content_moderation?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=Koopedi99
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=content_moderation;encrypt=false
+spring.datasource.username=sa
+spring.datasource.password=Koopedi99!
+spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 
-
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database-platform=org.hibernate.dialect.SQLServer2012Dialect
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
-#spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.hibernate.ddl-auto=update
 
-spring.cache.type=redis
-
-logging.level.org.springframework=INFO
-logging.level.co.za.flash=DEBUG
+spring.datasource.hikari.maximum-pool-size=10
+spring.datasource.hikari.minimum-idle=2
